#04 Check point 1. configuração de arquivos estáticos. 2. configuração do CKEDITOR.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,27 @@
 /.idea
 .python-version
 /db.sqlite3
+/static/ckeditor
+/static/admin
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# C extensions
+*.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
